--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -5,7 +5,10 @@ certifi==2024.8.30
 charset-normalizer==3.4.0
 colorama==0.4.6
 distro==1.9.0
+dj-rest-auth==7.0.0
 Django==4.2.16
+django-allauth==65.2.0
+django-cors-headers==4.6.0
 django-restframework==0.0.1
 djangorestframework==3.15.2
 exceptiongroup==1.2.2
