--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -2,12 +2,15 @@ annotated-types==0.7.0
 anyio==4.6.2.post1
 asgiref==3.8.1
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 colorama==0.4.6
+cryptography==43.0.3
+defusedxml==0.7.1
 distro==1.9.0
 dj-rest-auth==7.0.0
 Django==4.2.16
-django-allauth==65.2.0
+django-allauth==0.61.1
 django-cors-headers==4.6.0
 django-restframework==0.0.1
 djangorestframework==3.15.2
@@ -17,10 +20,15 @@ httpcore==1.0.7
 httpx==0.27.2
 idna==3.10
 jiter==0.7.1
+oauthlib==3.2.2
 openai==1.54.4
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
+PyJWT==2.10.0
+python3-openid==3.2.0
 requests==2.32.3
+requests-oauthlib==2.0.0
 sniffio==1.3.1
 sqlparse==0.5.1
 tqdm==4.67.0
