--- a/front/final_front/package.json
+++ b/front/final_front/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "pinia": "^2.2.6",
+    "pinia-plugin-persistedstate": "^4.1.3",
+    "swiper": "^11.1.14",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
