--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -12,6 +12,7 @@ dj-rest-auth==7.0.0
 Django==4.2.16
 django-allauth==0.61.1
 django-cors-headers==4.6.0
+django-environ==0.11.2
 django-restframework==0.0.1
 djangorestframework==3.15.2
 exceptiongroup==1.2.2
